--- a/MPSeminarskaFinalWebSite/web.config
+++ b/MPSeminarskaFinalWebSite/web.config
@@ -4,12 +4,22 @@
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+  
+  <connectionStrings>
+    <add name="ConnectionString" connectionString="Data Source=.\SQLEXPRESS;AttachDbFilename=C:\Dopolnitelno\Projects\Visual Studio 2010\WebSites\MPSeminarskaFinal\App_Data\TestDB.mdf;Integrated Security=True;User Instance=True" />
+  </connectionStrings>
+  <location path="AdminPage.aspx">
+    <system.web>
+      <authorization>
+        <allow roles="Професор" />
+        <deny users="*" />
+      </authorization>
+    </system.web>
+  </location>
   <system.web>
-    <roleManager enabled="true" />
-    <authentication mode="Forms" />
+    <globalization fileEncoding="utf-8" requestEncoding="utf-8" responseEncoding="utf-8"></globalization>
+    <roleManager enabled="true"/>
+    <authentication mode="Forms"/>
     <compilation debug="true" targetFramework="4.0"/>
   </system.web>
-  <connectionStrings>
-    <add name="ConnectionString" connectionString="Data Source=.\SQLEXPRESS;AttachDbFilename=C:\Dopolnitelno\Projects\Visual Studio 2010\WebSites\MPSeminarskaFinal\App_Data\TestDB.mdf;Integrated Security=True;User Instance=True"/>
-  </connectionStrings>
 </configuration>
