--- a/MPSeminarskaFinalWebSite/web.config
+++ b/MPSeminarskaFinalWebSite/web.config
@@ -4,9 +4,55 @@
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+
+  <location path="AdminPage.aspx">
+    <system.web>
+      <authorization>
+        <allow roles="Професор" />
+        <deny users="*" />
+      </authorization>
+    </system.web>
+  </location>
+  <location path="IzborNaPredmeti.aspx">
+    <system.web>
+      <authorization>
+        <allow roles="Професор" />
+        <allow roles="Студент" />
+        <deny users="*" />
+      </authorization>
+    </system.web>
+  </location>
+  <location path="PredmetStudent.aspx">
+    <system.web>
+      <authorization>
+        <allow roles="Студент" />
+        <deny users="*" />
+      </authorization>
+    </system.web>
+  </location>
+  <location path="NovaSkala.aspx">
+    <system.web>
+      <authorization>
+        <allow roles="Професор" />
+        <deny users="*" />
+      </authorization>
+    </system.web>
+  </location>
+  <location path="PredmetProfesor.aspx">
+    <system.web>
+      <authorization>
+        <allow roles="Професор" />
+        <deny users="*" />
+      </authorization>
+    </system.web>
+  </location>
+  
+  <appSettings>
+    <add key="CryptoKey" value="%&gt;s{;+#"/>
+  </appSettings>
   
   <connectionStrings>
-    <add name="ConnectionString" connectionString="Data Source=.\SQLEXPRESS;AttachDbFilename=C:\Dopolnitelno\Projects\Visual Studio 2010\WebSites\MPSeminarskaFinal\App_Data\TestDB.mdf;Integrated Security=True;User Instance=True" />
+    <add name="ConnectionString" connectionString="Data Source=.\SQLEXPRESS;AttachDbFilename=C:\Dopolnitelno\Projects\Visual Studio 2010\WebSites\MPSeminarskaFinal\App_Data\TestDB.mdf;Integrated Security=True;User Instance=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <location path="AdminPage.aspx">
     <system.web>
@@ -19,7 +65,15 @@
   <system.web>
     <globalization fileEncoding="utf-8" requestEncoding="utf-8" responseEncoding="utf-8"></globalization>
     <roleManager enabled="true"/>
-    <authentication mode="Forms"/>
+    <sessionState timeout="30"/>
+    <authentication mode="Forms">
+      <forms loginUrl="Login.aspx" protection="All" timeout="30">
+      </forms>
+    </authentication>
     <compilation debug="true" targetFramework="4.0"/>
+    <httpModules>
+      <add name="CryptoQueryStringUrlRemapper"
+        type="SmartSoft.QueryStringEncryption.CryptoQueryStringUrlRemapper"/>
+    </httpModules>
   </system.web>
 </configuration>
